--- a/neo.css
+++ b/neo.css
@@ -77,19 +77,81 @@ footer {
   color: #d5d5d5;
 }
 
+/*CSS form Scroll-To-Top button*/
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 5px;
+  right: 20px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+#myBtn:hover {
+      background-color: #555; /* Add a dark-grey background on hover */
+  }
+
+/*---Firefox Bug Fix --*/
+.carousel-item {
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+/*--- Fixed Background Image --*/
+figure {
+  position: relative;
+  top: 0px;
+  width: 100%;
+  height: 60%;
+  margin: 0!important;
+}
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#fixed {
+  background-image: url('/neo_images/nature2.jpg');
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  will-change: transform;
+}
+/*--- Bootstrap Padding Fix --*/
+[class*="col-"] {
+    padding: 1rem;
+}
 
 /*---Media Queries --*/
 /* Lare Screen size */
-@media (max-width: 992px) {
+@media screen and (max-width: 2000px) {
     .social a {
       font-size: 4em;
-      margin: 0 50px;
+      margin: 0 50px !important;
     }
    
   }
 
   /* Midium Screen Size */
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .carousel-caption {
   top: 45%;
  }
@@ -112,12 +174,16 @@ footer {
   font-size: 200%;
 }
 .social a {
-  font-size: 2.5em;
+  font-size: 3em;
   padding: 1.2rem;
+  margin: 0 50px;
 }
 }
 /* Small Screen Size */
-@media (max-width: 576px) {
+@media screen and (max-width: 568px) {
+  html {
+    font-size: smaller;
+  }
   .carousel-caption {
     top: 20%;
     font-size: 90%;
@@ -154,70 +220,22 @@ footer {
   p {
     font-size: 16px !important;
   }
-  
-}
-
-/*CSS form Scroll-To-Top button*/
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 5px;
-  right: 20px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  color: white;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-#myBtn:hover {
-      background-color: #555; /* Add a dark-grey background on hover */
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 5px;
+    right: 15px;
+    z-index: 99;
+    border: white;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 20px;
   }
+}
 
-/*---Firefox Bug Fix --*/
-.carousel-item {
-  transition: -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease;
-  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
-}
-/*--- Fixed Background Image --*/
-figure {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0!important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#fixed {
-  background-image: url('/neo_images/bueze.jpg');
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
-}
-/*--- Bootstrap Padding Fix --*/
-[class*="col-"] {
-    padding: 1rem;
-}
+
 
 
 
